--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ background-color: #95a1c9;
 .questions a{
 color: black;
 text-decoration: none;
+pointer-events: none;
 }
 
 .dropdown button,
@@ -75,4 +76,12 @@ cursor: pointer;
 opacity: 1;
 pointer-events: all;
 transform: translateY(0px);
+}
+
+.questions li:after{
+    pointer-events: none;
+}
+
+.home {
+    pointer-events: none;
 }
