--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ left: 0px;
 list-style: none;
 border-radius: 5px;
 opacity: 0;
-pointer-events: none;
+pointer-events: all;
 transform: translateY(-10px);
 transition: all 0.4s ease;
 }
