--- a/styles.css
+++ b/styles.css
@@ -94,3 +94,15 @@ ul li:hover ul.dropdown {
     font-size: 16px;
     border-radius: 2px;
   }
+
+.btn {
+    background-color: #04AA6D;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 2px;
+}
